# termory

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  config.ts  constants.ts  globals.css  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  providers.rs  sessions.rs  watcher.rs
src/components/: ActivityRail.tsx  BrandIcon.tsx  CommandPalette.tsx  CopyMenu.test.tsx  CopyMenu.tsx  EmptyState.tsx  FreshnessFooter.test.tsx  FreshnessFooter.tsx  MemoryCard.tsx  MessageBody.tsx  MessageList.tsx  RoutePlaceholder.tsx  SessionCardSkeleton.tsx  SnippetLine.tsx  TimeSeparator.tsx  UpdateDialog.tsx
src/components/providers/: InstallGuide.tsx  ProviderCard.tsx  ProviderEditor.tsx  ProviderOfficialCard.tsx  ProvidersPage.tsx
src/components/search/: SearchGroup.tsx  SearchPage.tsx  SearchResultCard.tsx
src/components/settings/: SettingsPage.tsx
src/components/stats/: DailyActivityHeatmap.tsx  DailyTokenUsageChart.tsx  OverviewHero.tsx  StatsFilterBar.tsx  StatsPage.tsx  shared.tsx
src/components/ui/: card.tsx  command.tsx  dialog.tsx  sonner.tsx
src/hooks/: usePersistentState.test.tsx  usePersistentState.ts  useSearchHits.ts
src/lib/: clipboard.ts  format.test.ts  format.ts  provider-utils.ts  search-utils.ts  session-utils.test.ts  session-utils.ts  set-utils.ts  stats-utils.test.ts  stats-utils.ts
src/test/: setup.ts
