[package]
name = "termory"
version = "0.1.0"
description = "Management for your AI Terminal and Memory"
authors = ["Termory"]
edition = "2021"

[lib]
name = "termory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Termory"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify = "8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-dialog = "2.3.0"
tauri-plugin-opener = "2.5.0"
walkdir = "2"
